--- a/style_mobile.css
+++ b/style_mobile.css
@@ -317,7 +317,7 @@ so that the content is unclickable while menu is shown
 .registry-text {
   background-color: white;
   height: 400px;
-  margin-top: 100px;
+  margin-top: 50vh;
   text-align: center;
   }
 
